syntax = "proto3";

package rivet.backend.pkg.user.avatar_upload_complete;

import "proto/common.proto";

message Request {
	rivet.common.Uuid user_id = 1;
	rivet.common.Uuid upload_id = 2;
}

message Response {

}
